--- a/index.html
+++ b/index.html
@@ -23,22 +23,20 @@
         <![endif]-->
 
     <!-- nav bar -->
-    <nav class="navbar navbar-fixed-top" role="navigation">
-      <div class="container-fluid">
-      &nbsp;
-      </div>
+    <nav class="navbar" role="navigation">
+
     </nav>
+
     <!-- Main image spot -->
-    <header>
-    <div class="container-fluid">
-      <picture>
-       <source srcset="https://placehold.it/1400x500?text=large-media" media="(min-width: 900px)">
-       <source srcset="https://placehold.it/900x500?text=medium-landscape" media="(min-width: 700px)">
-       <source srcset="https://placehold.it/600x300?text=medium-portrait" media="(min-width: 500px)">
-       <source srcset="https://placehold.it/400x300?text=small" media="(min-width: 400px)">
-       <img src="https://placehold.it/300x300?text=default mobile first" style="max-width:100%">
-      </picture>
-    </div>
+    <header class="hero">
+      <div class="container-full">
+        <picture>
+         <source srcset="img/large_head.png" media="(min-width: 900px)">
+         <source srcset="img/med_head.png" media="(min-width: 550px)">
+         <source srcset="img/small_head.png" media="(min-width: 400px)">
+         <img src="img/large_head.png" style="width:100%">
+        </picture>
+      </div>
     </header>
 
     <!-- buttons content -->
@@ -58,15 +56,15 @@
       <!-- textual content -->
       <div class="row">
         <div class="col-lg-12 hidden-xs hidden-sm hidden-md">
-          <h2>Sed FILL rum delectus ne, ne nibh virtue conceptam cum, choro graeci consequat ea vix. At labore dignissim qui.</h2>
+          <h2 class="text-center">Sed FILL rum delectus ne, ne nibh virtue conceptam cum, choro graeci consequat ea vix. At labore dignissim qui.</h2>
           <p>Autem albucius vel at, bonorum adipisci postulant ea nec. Ne nusquam accumsan honestatis mea, te est putant possim ornatus, debitis moderatius ut cum. Has at habeo nulla vulputate, ut reque option feugiat qui. Per labore invidunt recusabo te, tantas democritum constituto pro te, no ius mazim ubique facilisis.</p>
         </div>
         <div class="col-md-12 hidden-xs hidden-lg">
-          <h2>Sed harum delectus ne, ne nibh virtue conceptam cum, choro graeci consequat ea vix. At labore dignissim qui.</h2>
+          <h2 class="text-center">Sed harum delectus ne, ne nibh virtue conceptam cum, choro graeci consequat ea vix. At labore dignissim qui.</h2>
           <p>Autem albucius vel at, bonorum adipisci postulant ea nec. Ne nusquam accumsan honestatis mea, te est putant possim ornatus, debitis moderatius ut cum. Has at habeo nulla vulputate, ut reque option feugiat qui. Per labore invidunt no ius mazim ubique facilisis.</p>
        </div>
         <div class="col-sm-12 hidden-sm hidden-md hidden-lg">
-          <h2>At labore dignissim qui.</h2>
+          <h2 class="text-center">At labore dignissim qui.</h2>
           <p>Autem albucius vel at, bonorum adipisci postulant ea nec. Ne nusquam accumsan honestatis mea, te est putant possim ornatus, debitis moderatius ut cum. Has at habeo nulla vulputate, ut reque option feugiat qui. Per labore invidunt no ius mazim ubique facilisis.</p>
         </div>
       </div>
